Styled scrollbar, fixed all kinds of layout shift when opening popovers and when the page becomes scrollable

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,13 +56,42 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
-}
 
-@layer base {
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: hsl(var(--border));
+    border-radius: 5px;
+  }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: hsl(var(--border)) transparent;
+  }
   * {
     @apply border-border;
   }
+  html {
+    @apply overflow-y-scroll scroll-smooth;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply overscroll-none bg-background text-foreground;
+    font-synthesis-weight: none;
+    text-rendering: optimizeLegibility;
+  }
+  html body[data-scroll-locked] {
+    @apply !mr-0 !overflow-visible;
   }
 }
